tests/compile_errors/tostring-signature.buzz
// Expected `toString` method to be `fun toString() > str` got fun toString(_: str) > void
object Printable {
    fun toString(_: str) > void {}
}
